--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="src/script.js" type="module"></script>
     <title>First Spotify API</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
     <h1>My Spotify profile data</h1>
 
     <section id="profile">
-      <h2></h2>
-      <span></span>
+      <h2>Logged in as <span id="dislayName"></span></h2>
+      <span id="avatar"></span>
       <ul>
         <li>User ID: <span id="id"></span></li>
         <li>Email: <span id="email"></span></li>        
@@ -23,8 +20,5 @@
         <li>Profile Image: <span id="imgUrl"></span></li>
       </ul>
     </section>
-
-
-
   </body>
 </html>
