--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>My Spotify profile data</h1>
 
     <section id="profile">
-      <h2>Logged in as <span id="dislayName"></span></h2>
+      <h2>Logged in as <span id="displayName"></span></h2>
       <span id="avatar"></span>
       <ul>
         <li>User ID: <span id="id"></span></li>
